--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@tanstack/react-query": "^5.71.10",
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
+    "exceljs": "^4.4.0",
     "firebase": "^11.6.0",
     "firebase-admin": "^13.2.0",
+    "json2csv": "^6.0.0-alpha.2",
     "micro": "^10.0.1",
     "next": "15.2.4",
     "next-firebase-auth": "^1.4.0",
@@ -51,6 +53,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
+    "@types/json2csv": "^5.0.7",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
