--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-number-format": "^5.4.3",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
     "use-debounce": "^10.0.4",
     "valtio": "^2.1.4",
     "yup": "^1.6.1"
