--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.2.5",
     "@hookform/resolvers": "^5.0.1",
+    "@json2csv/node": "^7.0.6",
+    "@json2csv/plainjs": "^7.0.6",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
     "@mui/x-data-grid": "^7.28.3",
@@ -31,9 +33,8 @@
     "exceljs": "^4.4.0",
     "firebase": "^11.6.0",
     "firebase-admin": "^13.2.0",
-    "json2csv": "^6.0.0-alpha.2",
     "micro": "^10.0.1",
-    "next": "15.2.4",
+    "next": "^15.5.6",
     "next-firebase-auth": "^1.4.0",
     "next-themes": "^0.4.6",
     "nextjs-progressbar": "^0.0.16",
@@ -43,7 +44,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-number-format": "^5.4.3",
     "react-toastify": "^11.0.5",
-    "recharts": "^2.15.3",
+    "recharts": "^3.4.1",
     "use-debounce": "^10.0.4",
     "valtio": "^2.1.4",
     "yup": "^1.6.1"
@@ -74,7 +75,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-sonarjs": "^3.0.2",
     "eslint-plugin-testing-library": "^7.1.1",
-    "eslint-plugin-unicorn": "^58.0.0",
+    "eslint-plugin-unicorn": "^62.0.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
