--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
     "exceljs": "^4.4.0",
-    "firebase": "^11.6.0",
+    "firebase": "^11.10.0",
     "firebase-admin": "^13.2.0",
+    "lucide-react": "^0.554.0",
     "micro": "^10.0.1",
     "next": "^15.5.6",
     "next-firebase-auth": "^1.4.0",
@@ -45,6 +46,7 @@
     "react-number-format": "^5.4.3",
     "react-toastify": "^11.0.5",
     "recharts": "^3.4.1",
+    "stripe": "^20.0.0",
     "use-debounce": "^10.0.4",
     "valtio": "^2.1.4",
     "yup": "^1.6.1"
