--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "exceljs": "^4.4.0",
     "firebase": "^11.10.0",
     "firebase-admin": "^13.2.0",
+    "flag-icons": "^7.5.0",
     "lucide-react": "^0.554.0",
     "micro": "^10.0.1",
     "next": "^15.5.6",
