--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "flag-icons": "^7.5.0",
     "lucide-react": "^0.554.0",
     "micro": "^10.0.1",
-    "next": "^15.5.6",
+    "next": "15.5.9",
     "next-firebase-auth": "^1.4.0",
     "next-themes": "^0.4.6",
     "nextjs-progressbar": "^0.0.16",
